<resources>
    <string name="app_name">Dubai Police</string>
    <string name="no_internet">No Internet</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="session_expired">Session Expired! Please login again!</string>
    <string name="ok">OK</string>

    <string name="error_500">500 Internal Server Error</string>
    <string name="error_400">400 Bad Request</string>
    <!--    <string name="error_401">401 Unauthorized</string>-->
    <string name="error_401">401 Unauthorized</string>
    <string name="error_403">403 Forbidden</string>
    <string name="error_404">404 Not Found</string>
    <string name="error_502">502 Bad Gateway</string>
    <string name="error_401_relogin">relogin</string>

    <string name="welcome">Welcome</string>
    <string name="please_login_to_continue">Please Login to continue</string>
    <string name="email_id">Email ID</string>
    <string name="get_otp">Get OTP</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="please_confirm_otp_to_continue">Please Confirm OTP to continue</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>

    <string name="back">Back</string>
    <string name="set_your_pin">Set your PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_must_contain_6_digits">PIN must contain 6 digits</string>
    <string name="continue_txt">Continue</string>
    <string name="continue_txt_with_underline"><u>Continue</u></string>

    <string name="profile_picture">Profile Picture</string>
    <string name="setup_profile_picture">Set Up Profile Picture</string>
    <string name="skip_to_continue"><u>Skip to continue</u></string>
    <string name="skip">Skip</string>

    <string name="join_call">Join Call</string>


    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_an_action">Choose an action</string>

    <string name="search">Search</string>
    <string name="language">Language</string>
    <string name="passcode">Passcode</string>
    <string name="notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>
    <string name="system_and_server">System &amp; Server</string>
    <string name="content">Content</string>

    <string name="chats">Chats</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>

    <string name="dashboard">Dashboard</string>

    <string name="enter_pin">Enter PIN</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_pin_message">You will be logged out. Please contact admin for passcode reset.</string>

    <string name="title_force_update">"New Update Available"</string>
    <string name="message_force_update">Update your app to the newer version to unlock new features</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>

    <string name="photo_upload_validation">Please select photo to upload and continue</string>

    <string name="Notifications">Notifications</string>
    <string name="mark_all_as_read">Mark all as read</string>

    <string name="change"><u>Change</u></string>
    <string name="save_changes">Save Changes</string>
    <string name="save">Save</string>
    <string name="send">Send</string>

    <string name="permission_denied_msg">Permission denied permanently. Please allow permissions manually from Settings. Click OK to continue.</string>

    <string name="change_passcode_caps">CHANGE PASSCODE</string>
    <string name="old_passcode">Old Passcode</string>
    <string name="new_passcode">New Passcode</string>
    <string name="confirm_passcode">Confirm Passcode</string>

    <string name="congratulations">Congratulations!</string>
    <string name="passcode_changed_msg">Your Passcode has been successfully changed</string>
    <string name="go_to_home">Go to Home</string>

    <string name="select_language_caps">SELECT LANGUAGE</string>
    <string name="group_notification_caps">GROUP NOTIFICATIONS</string>

    <string name="arabic">Arabic</string>
    <string name="english">English</string>

    <string name="show_notifications">Show Notifications</string>
    <string name="sound">Sound</string>
    <string name="default_txt">Default</string>

    <string name="live">LIVE</string>

    <string name="typing">typing…</string>
    <string name="is_typing">is typing…</string>
    <string name="message">Message</string>

    <string name="group_info">Group Info</string>
    <string name="video_stream_list">Video Stream List</string>
    <string name="camera_stream_list">Camera Stream List</string>
    <string name="live_stream_list">Live Stream List</string>
    <string name="media_and_docs">Media and Docs</string>
    <string name="member_locations">Member Locations</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="muted">Muted</string>
    <string name="unmuted">Unmuted</string>
    <string name="add_participants">Add Participants</string>
    <string name="participants_caps">PARTICIPANTS</string>

    <string name="map_location">Map Location</string>

    <string name="start_live">Start Live</string>
    <string name="end_live">End Live</string>

    <!--Input Validations -->
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="please_enter_6_digits_pin">Please enter 6 digits PIN</string>
    <string name="pin_does_not_match">PIN does not match</string>
    <string name="please_enter_old_passcode">Please enter old passcode</string>
    <string name="please_enter_new_passcode">Please enter new passcode</string>
    <string name="passcode_not_matched">New passcode and confirm passcode does not match</string>
    <string name="please_select_group">Please Select Group</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Notification channel id -->
    <string name="default_notification_channel_id">dubaipoliceid</string>
    <string name="default_notification_channel_name">dubaipolicename</string>


    <!-- bottom sheet -->
    <string name="document">Document</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="no_address">Not a valid Address</string>
    <string name="photos_amp_video_library"><![CDATA[Photos & Video Library]]></string>
    <string name="open">Open</string>
    <string name="view">View</string>
    <string name="add">Add</string>
    <string name="answer">Answer</string>
    <string name="reject">Reject</string>


    <string name="choose_options">Choose Options</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_video">Select Video</string>

    <string name="mute_group">Mute Group</string>

    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>

    <string name="video_limit_msg">You cannot upload video having size more than 50 MB</string>
    <string name="media">Media</string>
    <string name="docs">Docs</string>
    <string name="voice_note">Voice note</string>

    <string name="live_streams">Live Streams</string>
    <string name="ip_camera_streams">IP Camera Streams</string>

    <string name="group_name">Group Name</string>

    <string name="view_group_image">View Group Image</string>
    <string name="change_group_image">Change Group Image</string>

    <string name="group_alert_level">Group Alert Level</string>
    <string name="notification_sound">Notification Sound</string>

    <string name="group_help">Group Help</string>

    <string name="alert_level">Alert Level</string>
    <string name="alert_level1">Grey</string>
    <string name="alert_level2">Yellow</string>
    <string name="alert_level3">Red</string>
    <string name="you_cannot_remove_by_yourself">You cannot remove by yourself</string>
    <string name="removed_successfully">Removed successfully</string>
    <string name="no_group_photo">Not able to load Group photo</string>
    <string name="you">You</string>
    <string name="no_participants_found">No Data found</string>
    <string name="retry">Retry</string>
    <string name="percentage">%.</string>
    <string name="previous_resume">A previously paused download has been resumed.</string>
    <string name="download_paused">The download was paused</string>
    <string name="group_is_in_read_only_mode">This group is in Read Only Mode</string>

    <string name="superuser">Super User</string>

</resources>