<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_30sdp"
    android:layout_margin="@dimen/_5sdp"
    android:paddingHorizontal="@dimen/_20sdp"
    android:background="@drawable/bg_popup_congratulations"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgCongratulations"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/ic_congratulations"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_compact_display_regular"
        android:text="@string/congratulations"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/title_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/sf_compact_display_regular"
        android:text="@string/passcode_changed_msg"
        android:textSize="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/subtitle_color" />


    <Button
        android:id="@+id/btnGoToHome"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/sf_compact_display_regular"
        android:text="@string/go_to_home"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="@dimen/_30sdp"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>