<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="LoginViewModel"
            type="com.dubaipolice.viewmodel.LoginViewModel" />

        <variable
            name="clickHandle"
            type="com.dubaipolice.callback.HandleClick" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".view.activity.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_20sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginHorizontal="@dimen/_50sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:src="@drawable/logo_login"/>

                <LinearLayout
                    android:id="@+id/layoutEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_compact_display_regular"
                        android:text="@string/welcome"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_24sdp"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:textColor="@color/title_color" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_compact_display_regular"
                        android:text="@string/please_login_to_continue"
                        android:textSize="@dimen/_12sdp"
                        android:textAlignment="viewStart"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textColor="@color/subtitle_color" />


                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_id"
                        android:maxLength="50"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/textFieldHint"
                        android:text="@={LoginViewModel.email}"
                        android:paddingVertical="@dimen/_15sdp"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:importantForAutofill="no"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:background="@drawable/bg_edittext"
                        android:textColor="@color/edittext_color"
                        android:textSize="@dimen/_12sdp" />

                    <Button
                        android:id="@+id/btnGetOtp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:background="@drawable/bg_button"
                        android:fontFamily="@font/sf_compact_display_regular"
                        android:text="@string/get_otp"
                        android:onClick="@{(view) -> clickHandle.clickHandle(view)}"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_compact_display_regular"
                        android:text="@string/confirm_otp"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_24sdp"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:textColor="@color/title_color" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_compact_display_regular"
                        android:text="@string/please_confirm_otp_to_continue"
                        android:textSize="@dimen/_12sdp"
                        android:textAlignment="viewStart"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textColor="@color/subtitle_color" />


                    <EditText
                        android:id="@+id/etOtp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_otp"
                        android:maxLength="6"
                        android:inputType="numberPassword"
                        android:textColorHint="@color/textFieldHint"
                        android:text="@={LoginViewModel.otp}"
                        android:paddingVertical="@dimen/_15sdp"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:importantForAutofill="no"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:background="@drawable/bg_edittext"
                        android:textColor="@color/edittext_color"
                        android:textSize="@dimen/_12sdp" />

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:background="@drawable/bg_button"
                        android:fontFamily="@font/sf_compact_display_regular"
                        android:text="@string/submit"
                        android:onClick="@{(view) -> clickHandle.clickHandle(view)}"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp" />

                <!--<EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:text="@={LoginViewModel.password}"
                    android:paddingVertical="@dimen/_15sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:textColorHint="@color/textFieldHint"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/edittext_color"
                    android:textSize="@dimen/_12sdp" />-->

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>